start of making chatbot

--- a/chatbot.html
+++ b/chatbot.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>React Basics</title>
+  <title>Chatbot</title>
 </head>
 
 <body>
@@ -13,18 +13,49 @@
 
   <script src="https://unpkg.com/supersimpledev/babel.js"></script>
   <script type="text/babel">
-    const button = <button>Hello</button>
-    const paragraph = <p>paragraph of text</p>
+    function ChatInput() {
+      return (
+        <>
+          <input placeholder="Send a message to Chatbot" size="30" />
+          <button>Send</button>
+        </>
+      );
+    }
 
-    const div = (
-      <div>
-        <button>Hello</button>
-        <p>paragraph of text {2 + 2}</p>
-      </div>
+    function ChatMessage({ message, sender}) {
+  /*     const message = props.message;
+      const sender = props.sender;
+      const { message, sender } = props; */
+
+      if (sender === 'robot') {
+        return (
+          <div>
+            <img src="./robot.png" width="50" />
+            {message}
+          </div>
+        );
+      }
+
+      return (
+        <div>
+          {message}
+          <img src="./user.png" width="50" />
+        </div>
+      );
+    }
+
+    const app = (
+      <>
+        <ChatInput />
+        <ChatMessage message="hello chatbot" sender="user" />
+        <ChatMessage message="Hello! How can I help you?" sender="robot" />
+        <ChatMessage message="what day is it today" sender="user" />
+        <ChatMessage message="Today is February 18" sender="robot"  />
+      </>
     );
 
     const container = document.querySelector('.js-container');
-    ReactDOM.createRoot(container).render(div);
+    ReactDOM.createRoot(container).render(app);
   </script>
 </body>
 
