create components for chat

--- a/chatbot.html
+++ b/chatbot.html
@@ -16,7 +16,10 @@
     function ChatInput() {
       return (
         <>
-          <input placeholder="Send a message to Chatbot" size="30" />
+          <input 
+            placeholder="Send a message to Chatbot" 
+            size="30" 
+          />
           <button>Send</button>
         </>
       );
@@ -27,35 +30,56 @@
       const sender = props.sender;
       const { message, sender } = props; */
 
-      if (sender === 'robot') {
+/*       if (sender === 'robot') {
         return (
           <div>
             <img src="./robot.png" width="50" />
             {message}
           </div>
         );
-      }
+      } */
 
       return (
         <div>
+          {sender === 'robot' && (
+            <img src="./robot.png" width="50" />
+          ) }
           {message}
-          <img src="./user.png" width="50" />
+          {sender === 'user' && (
+            <img src="./user.png" width="50" />
+          ) }
         </div>
       );
     }
 
-    const app = (
-      <>
-        <ChatInput />
-        <ChatMessage message="hello chatbot" sender="user" />
-        <ChatMessage message="Hello! How can I help you?" sender="robot" />
-        <ChatMessage message="what day is it today" sender="user" />
-        <ChatMessage message="Today is February 18" sender="robot"  />
-      </>
-    );
+    function App() {
+      return (
+        <>
+          <ChatInput />
+          <ChatMessage
+            message="hello chatbot"
+            sender="user"
+          />
+          <ChatMessage
+            message="Hello! How can I help you?"
+            sender="robot"
+          />
+          <ChatMessage
+            message="what day is it today"
+            sender="user"
+          />
+          <ChatMessage
+            message="Today is February 18"
+            sender="robot"
+          />
+        </>
+      );
+    }
+
+
 
     const container = document.querySelector('.js-container');
-    ReactDOM.createRoot(container).render(app);
+    ReactDOM.createRoot(container).render(<App />);
   </script>
 </body>
 
